--- a/src/app/auth/containers/login/login.component.html
+++ b/src/app/auth/containers/login/login.component.html
@@ -1,7 +1,6 @@
 <div class="auth">
   <h2 class="auth__title">LogIn</h2>
   <form
-    action=""
     class="form"
     [formGroup]="formLogin"
     (ngSubmit)="formLogin.valid && setLoginValue()">
@@ -30,7 +29,7 @@
       </div>
     </div>
     <button
-      class="auth__submit example-action-button"
+      class="auth__submit"
       mat-raised-button color="primary"
       type="submit">
       LogIn
